<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp">
    <com.gearback.custom.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grayText"
        android:textColor="@color/darkText"
        android:id="@+id/fieldPassword"
        android:hint="@string/field_password"
        android:inputType="textPassword"/>
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/emptyPassword"
        android:text="@string/field_empty_password"
        android:textSize="@dimen/small_text"
        android:textColor="@color/red" />
    <com.gearback.custom.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grayText"
        android:textColor="@color/darkText"
        android:id="@+id/fieldPasswordRepeat"
        android:hint="@string/field_password_repeat"
        android:inputType="textPassword"/>
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/emptyPasswordRepeat"
        android:text="@string/field_empty_password_repeat"
        android:textSize="@dimen/small_text"
        android:textColor="@color/red" />
</LinearLayout>