<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/forget_password_desc"
            android:textColor="@color/grayText"
            android:textSize="@dimen/normal_text"/>
        <com.gearback.custom.CustomFontEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/darkText"
            android:textColorHint="@color/grayText"
            android:hint="@string/field_email"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:id="@+id/emailValue"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/red"
            android:text="@string/field_empty_email"
            android:textSize="@dimen/small_text"
            android:id="@+id/emailEmpty"
            android:layout_marginTop="4dp"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailResult"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/email_not_found"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/large_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="8dp">
            <com.gearback.custom.CustomFontTextView
                android:text="@string/send_password"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:minWidth="48dp"
                android:id="@+id/setDialogBtn"
                android:textSize="@dimen/xlarge_text"
                android:gravity="center"
                android:textColor="@color/links"
                android:background="@color/transparent" />
            <com.gearback.custom.CustomFontTextView
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:minWidth="48dp"
                android:id="@+id/closeDialogBtn"
                android:textSize="@dimen/large_text"
                android:gravity="center"
                android:textColor="@color/grayText"
                android:background="@color/transparent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>