<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/register_gold"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/login_register_desc1"
            android:textColor="@color/grayText"
            android:textSize="@dimen/normal_text"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/login_register_desc2"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/grayText"
            android:textSize="@dimen/normal_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginBottom="8dp">
            <com.gearback.custom.CustomFontButton
                android:text="@string/login"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:id="@+id/loginBtn"
                android:textSize="@dimen/xlarge_text"
                android:gravity="center"
                android:textColor="@color/darkText"
                android:background="@color/transparent" />
            <com.gearback.custom.CustomFontButton
                android:text="@string/cancel"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:id="@+id/closeDialogBtn"
                android:textSize="@dimen/large_text"
                android:gravity="center"
                android:textColor="@color/grayText"
                android:background="@color/transparent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>