<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="right">
        <com.gearback.custom.MaterialIconTextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/backBtn"
            android:text="@string/backIcon"
            android:textColor="@color/darkText"
            android:gravity="center"
            android:textSize="@dimen/normal_icon_size" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:paddingBottom="32dp"
            android:clickable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:id="@+id/headerImage"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.gearback.custom.CustomFontTextView
                    android:text="@string/login_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/darkText"
                    android:textSize="@dimen/normal_text" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/logoImage"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
            <com.gearback.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grayText"
                android:textColor="@color/darkText"
                android:id="@+id/username"
                android:hint="@string/field_username"
                android:inputType="text"/>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emptyUsername"
                android:text="@string/empty_username"
                android:textSize="@dimen/small_text"
                android:textColor="@color/red" />
            <com.gearback.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grayText"
                android:textColor="@color/darkText"
                android:gravity="right"
                android:id="@+id/password"
                android:hint="@string/field_password"
                android:inputType="textPassword"/>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:id="@+id/emptyPassword"
                android:text="@string/empty_password"
                android:textSize="@dimen/small_text"
                android:textColor="@color/red" />
            <com.gearback.custom.CustomFontButton
                android:text="@string/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/xlarge_text"
                android:background="@drawable/blue_btn"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:id="@+id/loginBtn"/>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/small_text"
                android:text="یا"
                android:textColor="@color/grayText"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.gearback.custom.CustomFontButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_btn"
                    android:id="@+id/googleLoginBtn"
                    android:text="@string/login_google"
                    android:textColor="@color/darkText"
                    android:textSize="@dimen/xlarge_text"/>
                <ImageView
                    android:src="@drawable/google_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:elevation="6dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <com.gearback.custom.CustomFontTextView
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginSignupBtn"
                    android:textSize="@dimen/normal_text"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/links"
                    android:gravity="center"
                    android:clickable="true" />
                <com.gearback.custom.CustomFontTextView
                    android:text="@string/signup_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/grayText" />
            </LinearLayout>
            <com.gearback.custom.CustomFontTextView
                android:text="@string/forget_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginForgetPassBtn"
                android:textColor="@color/links"
                android:textSize="@dimen/small_text"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                android:clickable="true" />
            <com.gearback.custom.CustomFontTextView
                android:text="@string/agree_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginTermsPolicyText"
                android:textColor="@color/grayText"
                android:textSize="@dimen/xsmall_text"
                android:textColorHighlight="@color/transparent"
                android:textColorLink="@color/grayText"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                android:clickable="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>