<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingTop="16dp"
    android:layout_marginBottom="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <com.gearback.custom.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/fieldCompanyRadioText"
                android:text="@string/field_company"
                android:textColor="@color/darkText"
                android:textSize="@dimen/normal_text"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fieldCompanyRadio"
                android:checked="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <com.gearback.custom.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/fieldPersonalRadioText"
                android:text="@string/field_personal"
                android:textColor="@color/darkText"
                android:textSize="@dimen/normal_text"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fieldPersonalRadio"
                android:checked="true"/>
        </LinearLayout>
    </LinearLayout>
    <com.gearback.custom.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grayText"
        android:textColor="@color/darkText"
        android:id="@+id/fieldMelliNum"
        android:hint="@string/field_melli_num"
        android:inputType="number"/>
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/emptyMelliNum"
        android:text="@string/field_empty_melli_num"
        android:textSize="@dimen/small_text"
        android:textColor="@color/red" />
    <com.gearback.custom.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grayText"
        android:textColor="@color/darkText"
        android:id="@+id/fieldMelliCode"
        android:hint="@string/field_melli_code"
        android:inputType="text"/>
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/emptyMelliCode"
        android:text="@string/field_empty_melli_code"
        android:textSize="@dimen/small_text"
        android:textColor="@color/red" />
</LinearLayout>