<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/email_sent"
        android:textColor="@color/green"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/email_found"
            android:textColor="@color/darkText"
            android:textSize="@dimen/normal_text"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailValue"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/darkText"
            android:textSize="@dimen/large_text"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailCheck"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/new_password_sent"
            android:layout_marginTop="24dp"
            android:textColor="@color/grayText"
            android:textSize="@dimen/small_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="8dp">
            <com.gearback.custom.CustomFontTextView
                android:text="@string/continue_pay"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:minWidth="48dp"
                android:id="@+id/setDialogBtn"
                android:textSize="@dimen/xlarge_text"
                android:gravity="center"
                android:textColor="@color/links"
                android:background="@color/transparent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>