<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/no_internet"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="24dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialogText"
            android:textColor="@color/grayText"
            android:textSize="@dimen/normal_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="8dp">
        <com.gearback.custom.CustomFontButton
            android:text="@string/try_again"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/tryBtn"
            android:textSize="@dimen/xlarge_text"
            android:gravity="center"
            android:textColor="@color/darkText"
            android:background="@color/transparent" />
        <com.gearback.custom.CustomFontButton
            android:text="@string/cancel"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/closeDialogBtn"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textColor="@color/grayText"
            android:background="@color/transparent" />
    </LinearLayout>
</LinearLayout>